# AutoCut

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: edit_plan.sample.json  timeline.sample.json  transcript.sample.json
src/autocut/: __init__.py  __main__.py  asr.py  cli.py  ffmpeg.py  llm.py  ocr.py  preview.py  quality.py  report.py  semantic.py  timeline.py  transcript.py  video_info.py
tests/: test_asr.py  test_cli.py  test_llm.py  test_ocr.py  test_preview.py  test_quality.py  test_report.py  test_semantic.py  test_timeline.py  test_transcript.py
